pwgen (2.03-2) unstable; urgency=low

  * Adopt maintainership of pwgen.  (Closes: #282076)
  * Fix minor bug in man page.  (Closes: #311461)
  * Convert from debmake to debhelper
  * Add the --sha1 option so that pwgen uses the SHA1 hash to generate
    (not so) random passwords.
  * Add --symbols option which adds special symbols to the password.  
    (Closes: #154561)
  * Add short options for --no-capitalize and --no-numerals and make those
    options work when --secure is specified.

 -- Theodore Y. Ts'o <tytso@mit.edu>  Tue, 14 Jun 2005 14:59:19 -0400

pwgen (2.03-1) unstable; urgency=high

  * New upstream release (Thanks Ted for the quick release! :-)
    (Closes: #170312, #176688).
  * Bugs fixed in previous release
    (Closes: #166959, #167485)

 -- Vincent Renardias <vincent@debian.org>  Thu, 16 Jan 2003 11:07:14 +0100

pwgen (2.02-2) unstable; urgency=low

  * Apply small fix from Matthew J Backes (Closes: #176082).

 -- Vincent Renardias <vincent@debian.org>  Mon, 13 Jan 2003 16:09:17 +0100

pwgen (2.02-1) unstable; urgency=low

  * new upstream release; fixes the following bugs (Thanks Ted!):
    - If the number of characters is less than 5, force the use
      of the fully random generator, since the quality of phonetic
      generator is really bad if the lengths are small --- and if
      the length is less than or equal to 2, pwgen will loop
      forever (Closes: #117137).
    - Fix e-mail address in man page (Closes: #150579).
    - #include the appropriate header files to avoid -Wall warnings
      (Closes: #126774).
    - Fix floating point exception errors if the password is longer
      than terminal width (Closes: #113571).
    - Return an exit value of 0 when pwgen on success
      (Closes: #118181, #102063).

 -- Vincent Renardias <vincent@debian.org>  Tue, 16 Jul 2002 11:32:40 +0200

pwgen (2.01-3) unstable; urgency=low

  * Package is not native anymore (Closes: #44169).
  * pwgen now accept to generate passwords longer than 16 chars