@@ -5,12 +5,14 @@ pwgen (2.03-2) unstable; urgency=low
   * Convert from debmake to debhelper
   * Add the --sha1 option so that pwgen uses the SHA1 hash to generate
     (not so) random passwords.
-  * Add --symbols option which adds special symbols to the password.  
+  * Add --symbols option which adds special symbols to the password.
     (Closes: #154561)
   * Add short options for --no-capitalize and --no-numerals and make those
     options work when --secure is specified.
+  * Add --ambiguous option which avoids characters that can be confused by
+    the user.  (Closes: #51307)
 
- -- Theodore Y. Ts'o <tytso@mit.edu>  Tue, 14 Jun 2005 14:59:19 -0400
+ -- Theodore Y. Ts'o <tytso@mit.edu>  Tue, 14 Jun 2005 21:44:15 -0400
 
 pwgen (2.03-1) unstable; urgency=high
 
